--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,29 @@ jobs:
         npm run build
         cd ..
 
-    - name: 部署
+    - name: 部署到github个人主页
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         branch: gh-pages
         folder: build
+
+    - name: 登录到云服务器
+      env: 
+        SSH_HOST: ${{ secrets.SSH_HOST }}
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
+      run: | 
+        mkdir -p ~/.ssh
+        echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh -o StrictHostKeyChecking=no "operation@$SSH_HOST" "docker ps"
+
+    - name: 停止历史容器并删除镜像
+      run: |
+        docker stop blog-v1 || true
+        docker rm blog-v1 || true
+        docker rmi blog || true
+    
+    - name: 构建镜像并运行容器
+      run: |
+        docker build -t blog .
+        docker run -d -p 1234:80 --name blog-v1  blog
