--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,11 +38,15 @@ jobs:
         chmod 600 ~/.ssh/id_rsa
 
     - name: 构建docker镜像
+      env: 
+        SSH_HOST: ${{ secrets.SSH_HOST }}
       run: |
         docker build -t blog .
         docker save blog | ssh -o StrictHostKeyChecking=no "operation@$SSH_HOST" 'docker load'
 
     - name: 部署到服务器docker
+      env: 
+        SSH_HOST: ${{ secrets.SSH_HOST }}
       run: | 
         ssh -o StrictHostKeyChecking=no "operation@$SSH_HOST" '
           docker ps
